hard-gists/4555097/run.log
=== Docker Run Log for 4555097 ===
Started at: Mi 29. Okt 14:43:46 CET 2025

[2025-10-29 14:43:47] START: Running container for 4555097
[2025-10-29 14:43:47] SUCCESS: Container cbc1a3591e484c95d5719e0560c81ba5382cf843db294313d9116100d5ba664c started for 4555097
=== Container logs for 4555097 ===
  File "/snippet.py", line 20
    print node.surface, node.feature
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4555097 ===
[2025-10-29 14:43:49] INFO: Container cbc1a3591e484c95d5719e0560c81ba5382cf843db294313d9116100d5ba664c has stopped
